@@ -85,10 +85,6 @@ else ()
     set(CANTATA_ICON_INSTALL_PREFIX ${SHARE_INSTALL_PREFIX}/icons/hicolor)
 endif ()
 
-if (NOT APPLE AND NOT WIN32)
-    set(UNITY_MENU_HACK ON)
-endif ()
-
 if (NOT WIN32 AND NOT APPLE AND ENABLE_DEVICES_SUPPORT AND ENABLE_UDISKS2)
     set(WITH_SOLID_UDISKS2 ON)
 endif ()
