@@ -5,6 +5,7 @@
 3. Fix potential issue with priority menu items being disabled.
 4. When adding items with a custom priority, or updating a custom priority,
    add option to have this priority decrease with each item.
+5. Remove unity menu icon work-around.
 
 2.1.0
 -----
